--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 		<script src="jquery-1.12.4.min.js"></script>
 	</head>
 	<body>
-		<div>
-			<img src="chuck-norris_1.jpg">
+		<div class="image">
 	  		<button id="get-joke">Random joke</button>
 	  		<p id="joke"></p>
-	  		<img src="chuck-norris_2.jpg">
 		</div>
 		<script type='text/javascript' src='script.js'></script>
 	</body>
